# InheritNext

./: .gitignore  APP FLOW.md  Cargo.toml  LICENCE  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
TestScripts/: initial_to_asset_flow.sh
scripts/: trigger-execute-playwright.mjs
src/InheritNext_backend/: Cargo.toml  InheritNext_backend.did
src/InheritNext_backend/src/: helpers.rs  lib.rs  storage.rs  types.rs  vault.rs
src/InheritNext_frontend/: index.html  package.json
src/InheritNext_frontend/src/: App.jsx  icp-utils.js  index.scss  theme.js
src/InheritNext_frontend/src/components/: Dashboard.jsx  LandingPage.jsx  Onboarding.jsx
src/civ_backend/: Cargo.toml  civ_backend.did  dfx.json
src/civ_backend/src/: api.rs  audit.rs  auth.rs  crypto.rs  document.rs  heirs.rs  lib.rs  models.rs  rng.rs  storage.rs  time.rs
src/civ_backend/src/api/: assets.rs  bridge.rs  ckbridge.rs  common.rs  custody.rs  distributions.rs  documents.rs  escrow.rs  heirs.rs  mod.rs  nft_adapter.rs  notify.rs  reconciliation.rs
src/civ_backend/src/api/executor/: maintenance.rs  mod.rs  stable.rs  work.rs
src/civ_backend/src/api/retry/: adaptive.rs  bridge_retry.rs  control.rs  item.rs  kind.rs  mod.rs  policy.rs  processor.rs  stats.rs
src/civ_backend/src/models/: asset.rs  audit.rs  base.rs  bridge.rs  custody.rs  distribution.rs  document.rs  errors.rs  heir.rs  integrity.rs  mod.rs  payout.rs  user.rs
src/civ_frontend/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/civ_frontend/public/: .ic-assets.json5
src/civ_frontend/public/favicons/: site.webmanifest
src/civ_frontend/src/: .prettierignore  App.css  App.jsx  App.tsx  index.css  main.tsx
src/civ_frontend/src/components/: AssetDistribution.tsx  AssetDistributionChart.tsx  AssetsList.tsx  AuthExpiryBanner.tsx  DemoModeToggle.tsx  DistributionsManager.tsx  FeedbackFooter.tsx  GuidedWalkthrough.tsx  Header.tsx  HeirsList.tsx  IntegritySummary.tsx  Navbar.tsx  Sidebar.tsx  (+6 more)
(+40 files in other folders)
