[package]
name = "InheritNext_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
generate-did = "0.1.1"
ic-cdk = "0.19"
ic-cdk-macros = "0.19.0"
ic-cdk-timers = "1" # Feel free to remove this dependency if you don't need timers
ic-stable-structures = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
