[package]
name = "civ_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.7"
ic-cdk-macros = "0.18.1"
candid = "0.10.18"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"   # optional but useful
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
hex = "0.4"
