[package]
name = "civ_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2" 
serde = { version = "1.0", features = ["derive"] }
ic-cdk-macros = "0.18.5"
icrc-ledger-types = "0.1.11"
icrc-ledger-client-cdk = "0.1.3"
serde_json = "1.0"
ic-management-canister-types = "0.4.1"
sha2 = "0.10"
